--- a/numpy_learn_01.ipynb
+++ b/numpy_learn_01.ipynb
@@ -96,6 +96,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5  6  7  8  9 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# arange(start , stop , step , dtype)\n",
+    "# 起始值 终止值(不包含) 步长默认1 , \n",
+    "a = np.arange(1,11,1)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [
